--- a/views/home.html
+++ b/views/home.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Bill Burr</h1>
-    <img id="faceImage" src="/public/images/billface.jpeg" alt="bill face">
+    <img id="faceImage" src="./public/images/billface.jpeg" alt="bill face">
     <div class="linkContainer">
-        <a href="/views/about.html">About</a>
-        <a href="/views/works.html">Works</a>
-        <a href="/views/photo-gallery.html">Photo gallery</a>
+        <a href="/about">About</a>
+        <a href="/works">Works</a>
+        <a href="/photo-gallery">Photo gallery</a>
     </div>
    
 </body>
