--- a/views/home.html
+++ b/views/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Bill Burr</h1>
-    <img id="faceImage" src="./public/images/billface.jpeg" alt="bill face">
+    <img id="faceImage" src="images/billface.jpeg" alt="bill face">
     <div class="linkContainer">
         <a href="/about">About</a>
         <a href="/works">Works</a>
