--- a/views/photo-gallery.html
+++ b/views/photo-gallery.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <title>Photo gallery</title>
 </head>
 <body>
-  <img class="galleryImg" src="/public/images/photo1.jpg" alt="1">
-  <img class="galleryImg" src="/public/images/photo2.jpeg" alt="2">
-  <img class="galleryImg" src="/public/images/photo3.jpeg" alt="3">
-  <img class="galleryImg" src="/public/images/photo4.jpeg" alt="4">
-  <img class="galleryImg" src="/public/images/photo5.jpeg" alt="5">
-  <a href="/views/home.html">Home page</a>
+  <img class="galleryImg" src="images/photo1.jpg" alt="1">
+  <img class="galleryImg" src="images/photo2.jpeg" alt="2">
+  <img class="galleryImg" src="images/photo3.jpeg" alt="3">
+  <img class="galleryImg" src="images/photo4.jpeg" alt="4">
+  <img class="galleryImg" src="images/photo5.jpeg" alt="5">
+  <a href="/">Home page</a>
 </body>
 </html>
